# Covenant

./: .env.example  .gitignore  ARCHITECTURE.md  CODING_AGENTS.md  README.md  hardhat.config.ts  openapi.yaml  package.json  pyproject.toml  render.yaml  tsconfig.json  wrangler.jsonc
.codex/evidence/: covenant-codex-prompts.jsonl
apps/api/src/: passports.test.ts  proofs.test.ts  proposals.test.ts  server.test.ts  server.ts
apps/web/: next.config.mjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: CovenantFlow.tsx
contracts/scripts/: deploy-lib.ts  deploy-stack.ts  smoke-deployment.ts
contracts/src/: ActionRouter.sol  CovenantFactory.sol  CovenantReceipt.sol  CovenantTypes.sol  CovenantVault.sol  IERC20Minimal.sol  MockToken.sol  PolicyEngine.sol
contracts/test/: ActionRouter.test.ts  CovenantFactory.test.ts  DeploymentSmoke.test.ts  PolicyEngine.test.ts
data/: sample_order.json
deployments/: arbitrumSepolia.json  mantleSepolia.json
docs/: ARCHITECTURE.md  BACKEND_PLAN.md  BUILD_PLAN.md  PRODUCT_SPEC.md  REGISTRATION_COPY.md
render-agent/: README.md  package.json
render-agent/src/: policy-variance-agent.js  server.js
src/covenantaccess/: __init__.py  engine.py  server.py
tests/: test_coded_agent_logic.py  test_engine.py
uipath-coded-agent/: .env.example  README.md  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
uipath-coded-agent/src/covenant_clearance_strategy_agent/: __init__.py  agent.py  graph.py  llm.py  logic.py  schemas.py
worker/src/: index.ts  policy-variance.ts
(+22 files in other folders)
